*iodine-0.7.0 (18 Jul 2014)

  18 Jul 2014; Michael Weber <xmw@gentoo.org>
  +files/iodine-0.7.0-TestMessage.patch, +files/iodined.conf,
  +files/iodined.init, +iodine-0.7.0.ebuild, +metadata.xml:
  Version bump (bug 513560)