@@ -1,3 +1,7 @@
+  18 Jul 2014; Michael Weber <xmw@gentoo.org> +files/iodined-1.init,
+  -files/iodined.init, iodine-0.7.0.ebuild:
+  Move /var/run to /run, and use upstream /usr/sbin
+
 *iodine-0.7.0 (18 Jul 2014)
 
   18 Jul 2014; Michael Weber <xmw@gentoo.org>
